--- a/promises/index.html
+++ b/promises/index.html
@@ -7,7 +7,35 @@
   <body>
     <button>Click</button>
 
+
     <script>
+    function startGame() {
+      // since we expect counter to change over time we are setting it as "let"
+        let counter = 0;
+
+        document.querySelector('button').addEventListener('click', () => {
+          ++counter;
+        });
+
+        return new Promise((resolve, reject) => {
+          setTimeout(() => {
+            if (counter > 5) {
+              resolve();
+            } else {
+              reject();
+            }
+          }, 2000)
+        })
+      }
+
+      startGame()
+        .then(() => alert('you win'))
+        .catch(() => alert('you lost'));
+
+    </script>
+
+    <!-- <script>
+    //This is the code in vanilla JS without any promises
     // since we expect counter to change over time we are setting it as "let"
       let counter = 0;
 
@@ -22,6 +50,6 @@
           alert('you lost');
         }
       }, 2000)
-    </script>
+    </script> -->
   </body>
 </html>
